# PRY-1

./: .env.example  .gitignore  .markdownlint.json  CLAUDE.md  MODIFICATION-LOG.md  Makefile  README.md  SESSION-STATE.md  alembic.ini  package-lock.json  package.json  pyproject.toml
.cursor/rules/: auto-commit.mdc
docs/: 2026-06-29-approval-gate-gates-design.md  2026-06-29-business-writer-path4-checklist.md  2026-06-29-dry-run-inspector-semantic-map.md  2026-06-29-pre-71-smoke.md  architecture.md  b-5-pynput-evaluation.md  d4-claw-code-mapping.md  d8-anomaly-detector-evaluation.md  day11-companion-write-8-1-readiness.md  day11-notes-encryption-production-runbook.md  day12-8-1-preflight-checklist.md  outlook-gmail-evaluation.md  spike-imap-compat.md  v0.1-launch-plan.md  v0.1-release-notes.md  v0.1.0-closure-preview.md  v0.1.0-status-snapshot-2026-06-17.md  v0.2-b1-b2-implementation-readiness.md  v0.2-launch-plan-closure-2026-07-01.md  v0.2-launch-plan.md  v0.2-release-notes-2026-06-22.md  v0.2-substage-mapping.md  v0.2.1-1-candidate-evaluation-2026-06-17.md  v0.2.1-2-candidate-evaluation-2026-06-17.md  v0.2.1-candidates-2026-06-17.md  v0.2.1-virtual-spike-report-2026-06-17.md  v0.2.10-full-restart-checklist-2026-06-22.md  v0.2.11-7-stage-dry-run-2026-06-20.md  v0.2.12-6-23-restart-prep-2026-06-20.md  v0.2.13-6-23-restart-playbook-2026-06-20.md  v0.2.14-pitfall-recovery-drill-8-2026-06-20.md  v0.2.15-A-sprint-restart-readiness-2026-06-20.md  v0.2.16-7-1-monthly-review-prep-2026-06-20.md  v0.2.17-6-23-readiness-final-sprint-2026-06-22.md  v0.2.18-docs-assumption-pitfall-2026-06-22.md  v0.2.19-6-23-restart-execution-package-2026-06-22.md  v0.2.2-p5-oauth-phase2-launch-2026-06-18.md  v0.2.20-restart-preflight-result-2026-06-22.md  v0.2.26-w3-virtual-bill-spike-2026-06-23.md  v0.2.27-w3-realistic-bill-spike-2026-06-23.md  (+112 more)
docs/reports/: 2026-06-15-d7-virtual-spike.md
docs/ui/: codex-style-dashboard.html  codex-style-dashboard.md
launchd_plist/: com.myaiemployee.agent.plist  com.myaiemployee.burn-in-report.plist  com.myaiemployee.dashboard.plist  com.myaiemployee.digital-employee.plist  com.myaiemployee.health-monitor.plist  com.myaiemployee.imap-sync.plist  com.myaiemployee.menu-bar.plist  com.myaiemployee.news-refresh.plist
memory/: checkpoint-2026-07-09-p3-a-t3-l2-91-fix.md  checkpoint-2026-07-09-p3-a-t3-l2-92-fix.md  checkpoint-2026-07-09-p3-a-t3-l2-deploy-only.md  checkpoint-2026-07-09-p3-a-t3-l3-93-fix.md  checkpoint-2026-07-09-p3-a-t3-l3-reverify.md  checkpoint-2026-07-09-p3-a-t3-l4-93-verify.md  checkpoint-2026-07-09-p3-a-t3-l4-94-b-verify.md  day10-closure-pitfalls-2026-07-02.md  day11-snapshot-guardian-drift-2026-07-04.md  pitfall-86-router-empty-api-key-graceful-degradation.md  pitfall-88-spike-src-signature-drift.md  pitfall-90-launchd-domain-not-persistent.md  pitfall-91-launchd-documents-shell-operation-not-permitted.md  pitfall-92-fix-path-migration.md  pitfall-92-launchd-documents-data-path-block.md  pitfall-93-launchd-uv-path-not-in-path.md  pitfall-94-launchd-menubar-db-context-manager.md  pitfall-95-launchd-background-process-type-no-fork.md  pitfall-97-sqlcipher-cross-thread-close.md  pitfall-98-launchd-legacy-retirement-gap.md  pitfall-launchd-deploy-only-mode.md
ops/: 2026-07-11-to-25-autonomous-100-plan.md  check-pitfall-81.sh  day1-baseline.md  day1-phase2-env.md  day10-notes-encryption-dryrun-closure.md  day12-weekly-health-2026-07-03.md  day12-weekly-health-2026-07-09.md  day2-81-fix-closure.md  day2-81-tcc-fix-runbook.md  day2-b-no-response.md  day2-closure.md  day2-start-menubar-prereq.md  day3-c-real-send-1-closure.md  day4-a-finance-notes-closure.md  day5-dashboard-closure.md  day6-a-csv-real-launch.md  day6-b-notes-real-launch.md  day6-c-onestart-closure.md  day6-d-closure.md  day7-a-real-import-closure.md  day7-b-notes-real-closure.md  day8-launch.md  start-digital-employee.sh  start-menubar.sh
ops/p0-4-observations/: 2026-07-19-T201220-health.json  2026-07-19-T201220-health.txt  2026-07-19-T231633-health.json  2026-07-19-T231633-health.txt  2026-07-19-T231639-health.json  (+7 more)
reports/: 2026-07-01-loop-patterns-prep.md  2026-07-01-monthly-review-checklist.md  2026-07-01-monthly-review-decision.md  2026-07-01-v0.2.1-rc1-decision-prep.md  2026-07-monthly-review.md  2026-08-01-readiness-qq-only-2026-06-29.md  D1-脚手架完成.md  D1.1-依赖与包结构重构.md  D2-IMAP完成.md  D3.1-数据层基础完成.md  D3.2-ORM与迁移框架完成.md  D3.3-同步脚本与性能spike.md  D4.1-LLM路由层完成.md  D4.1.1-HTTP调用实施完成.md  D4.2-MCP抽象层完成.md  D4.3-Events表契约完成.md  D4.4-任务策略板完成.md  D4.5-release-readiness.md  D4.6-邮件分类器.md  D4.7-草稿生成器.md  D4.7.4-草稿审阅.md  D4.7.4.10-spike.md  D4.8-草稿入库.md  D5-spike-100.md  D5-业务调度器.md  D5.6.4-spike-100.md  D5.6.5-real-send-1.md  Day10-closure.md  Day10-companion-write-dryrun-closure.md  Day11-closure.md  Day12-weekly-checkpoint-2026-07-03.md  Day8-撞坑71解除-4候选落地.md  README.md  d5-acceptance.md  d5.6.4-acceptance.md  finance-monthly-2026-06.md  monthly-review-decision-2026-07-01.md  qq-smtp-10-spike-2026-06-30.md  qq-smtp-spike-2026-06-29.md  v0.1-e2e-scenarios.md  (+34 more)
scripts/: __init__.py  check_keychain_redaction.py  check_quality_snapshot.py  check_state_entries.py  codex_daily_notes.py  eval_agent_runs.py  export_transaction_candidates.py  import_alipay.py  import_all.py  import_real_gate.py  import_wechat.py  launchd_install.sh  launchd_kickstart_and_seal.sh  launchd_uninstall.sh  monitor_launchd_health.py  monthly_report.py  p3_burn_in_report.py  pre-commit  process_inbox.py  process_inbox_gate.py  refresh_daily_news.py  run_agent_email_draft.py  run_menu_bar.py  sample_launchd_health.py  send_one_approved.py  setup_wizard.py  spike_b5_quartz.py  spike_d7_virtual_cross_source.py  spike_d8_1000.py  spike_d8_anomaly.py  spike_d8_real_faker.py  spike_day10_notes_encryption_dryrun.py  spike_outbox_100.py  spike_real_bill.py  spike_review_100.py  spike_send_100.py  spike_set_smtp_password.py  spike_sqlcipher.py  spike_sync.py  spike_v0_1_scenarios.py  (+8 more)
src/: __init__.py  main.py
templates/: finance_monthly.md
tests/: __init__.py  test_main.py  test_main_entrypoints.py  test_quality_snapshot.py
(+364 files in other folders)
