[tool.poetry]
name = "my-ai-employee"
version = "0.1.0"
description = "全天候个人 AI 数字员工 - 邮件 + 日程 + 财务 + 笔记 + 主动提醒"
authors = ["Mr-PRY <mr-pry@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Mr-PRY/my-ai-employee"
repository = "https://github.com/Mr-PRY/my-ai-employee"
documentation = "https://github.com/Mr-PRY/my-ai-employee/blob/main/docs/architecture.md"
keywords = ["personal-os", "ai-assistant", "imap", "caldav", "privacy-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
packages = [
    { include = "src" },
]

# ===== 运行时依赖（Week 1+2 MVP）=====
[tool.poetry.dependencies]
python = "^3.11"  # 3.14.4 已装；poetry 自动选 3.11/12/13 兼容版本

# LLM（minimax M3 由 Claude Code SDK 提供，无需显式依赖）
# anthropic = { version = "^0.39.0", optional = true }

# Week 1 D2 - IMAP
imapclient = "^3.0.1"          # IMAP 协议（含 OAuth 2.0 XOAUTH2）
keyring = "^25.5.0"            # macOS Keychain 凭证

# Week 1 D3 - 数据层
pysqlcipher3 = "^1.2.0"        # SQLite 加密
sqlalchemy = "^2.0.36"         # ORM
alembic = "^1.14.0"            # 数据库迁移
# sqlite-vss 需要特定 sqlite 版本，先注释
# sqlite-vss = "^0.1.3"

# Week 1 D5 - CalDAV
caldav = "^2.0.0"              # CalDAV 客户端
icalendar = "^6.0.0"           # iCalendar 解析

# 任务调度
apscheduler = "^3.10.4"        # 定时任务
python-dateutil = "^2.9.0"     # 日期处理

# 工具
python-dotenv = "^1.0.1"       # .env 读取
rich = "^13.9.4"               # 美化输出
click = "^8.1.7"               # CLI 框架
pydantic = "^2.10.3"           # 数据校验
loguru = "^0.7.3"              # 日志

# macOS 原生
pyobjc-framework-Cocoa = "^10.3"  # macOS Cocoa 绑定（菜单栏用 rumps 间接）
rumps = "^0.4.0"                   # Mac 菜单栏 UI

[tool.poetry.extras]
# 暂时不做可选依赖分组，统一装
# dev = ["pytest", "black", "ruff"]

# ===== 开发依赖 =====
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"              # 单元测试
pytest-cov = "^6.0.0"          # 覆盖率
pytest-asyncio = "^0.24.0"     # 异步测试
black = "^25.1.0"              # 格式化
ruff = "^0.8.4"                # lint
mypy = "^1.13.0"               # 类型检查

# 注意：markdownlint-cli2 来自 npm（不是 PyPI）
# 安装：npm install -g markdownlint-cli2
# 或使用：npx markdownlint-cli2（无需安装）

# 测试数据生成
faker = "^30.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ===== 工具配置 =====
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "data", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # 行长度交给 black

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Week 1 不强制，Phase 2 再严
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",          # 显示所有摘要
    "--strict-markers",
    "--strict-config",
    "--cov=src",    # 自动覆盖率
    "--cov-report=term-missing",
]
markers = [
    "slow: 标记为慢测试（默认跳过，跑时加 --runslow）",
    "integration: 集成测试（需要真实服务）",
    "spike: spike 验证（Week 1 末决策点用）",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 1
