[project]
name = "my-ai-employee"
version = "0.1.0"
description = "全天候个人 AI 数字员工 - 邮件 + 日程 + 财务 + 笔记 + 主动提醒"
authors = [
    { name = "Mr-PRY", email = "mr-pry@example.com" },
]
readme = "README.md"
license = "MIT"
keywords = ["personal-os", "ai-assistant", "imap", "caldav", "privacy-first"]
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    # Week 1 D2 - IMAP
    "imapclient>=3.0.1",          # IMAP 协议（含 OAuth 2.0 XOAUTH2）
    "keyring>=25.5.0",            # macOS Keychain 凭证
    # Week 1 D3 - 数据层（SQLCipher 加密 SQLite）
    # D1.1 决策：pysqlcipher3 1.2.0 在 Python 3.12 无 wheel，源包 setup.py 空
    # 改用 coleifer 维护的活跃 fork：sqlcipher3（API 兼容，DB 文件可互迁）
    "sqlcipher3>=0.6.2",          # SQLite 加密（pysqlcipher3 的活跃 fork）
    "sqlalchemy>=2.0.36",         # ORM
    "alembic>=1.14.0",            # 数据库迁移
    # Week 1 D5 - CalDAV
    "caldav>=2.0.0",              # CalDAV 客户端
    "icalendar>=6.0.0",           # iCalendar 解析
    # 任务调度
    "apscheduler>=3.10.4",        # 定时任务
    "python-dateutil>=2.9.0",     # 日期处理
    # 工具
    "python-dotenv>=1.0.1",       # .env 读取
    "rich>=13.9.4",               # 美化输出
    "click>=8.1.7",               # CLI 框架
    "pydantic>=2.10.3",           # 数据校验
    "loguru>=0.7.3",              # 日志
    # macOS 原生
    "pyobjc-framework-Cocoa>=10.3",  # macOS Cocoa 绑定（菜单栏用 rumps 间接）
    "rumps>=0.4.0",                   # Mac 菜单栏 UI
]

# D1.1.1 修复：把 [project.urls] 移到 [project.optional-dependencies] 之前，
# 保持 [project] 主块作用域连贯（D1 阶段把 urls 块错位放在了 dependencies 之前，
# 导致 hatchling 误把 dependencies 当成 [project.urls] 的子字段）
[project.urls]
Homepage = "https://github.com/Mr-PRY/my-ai-employee"
Repository = "https://github.com/Mr-PRY/my-ai-employee"
Documentation = "https://github.com/Mr-PRY/my-ai-employee/blob/main/docs/architecture.md"
Issues = "https://github.com/Mr-PRY/my-ai-employee/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",              # 单元测试
    "pytest-cov>=6.0.0",          # 覆盖率
    "pytest-asyncio>=0.24.0",     # 异步测试
    "black>=25.1.0",              # 格式化
    "ruff>=0.8.4",                # lint
    "mypy>=1.13.0",               # 类型检查
    "watchdog>=6.0.0",            # hot reload（D5 dev 模式用）
    "faker>=30.3.0",              # 测试数据生成
    "hatchling>=1.25.0",          # 包构建后端（uv build 需要本地可解析）
]

# 注意：markdownlint-cli2 是 npm 包，详见 package.json
# 安装：npm install（项目级），无需全局

# ===== 构建系统 =====
# hatchling 既是 build-system.requires（远程 wheel 打包用），
# 也是 dev 依赖（uv build 本地构建时需要）
# 两者版本必须一致 — 改一处记得改另一处
[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_ai_employee"]

# ===== 工具配置 =====
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "data", "dist", "build", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # 行长度交给 black

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Week 1 不强制，Phase 2 再严
ignore_missing_imports = true
# D3 阶段 scripts/ 是 CLI/spike 脚本（不在 mypy 严格范围）— 业务代码走 src/ + tests/
exclude = ["scripts/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",          # 显示所有摘要
    "--strict-markers",
    "--strict-config",
    "--cov=my_ai_employee",  # 自动覆盖率（包名重构后）
    "--cov-report=term-missing",
]
markers = [
    "slow: 标记为慢测试（默认跳过，跑时加 --runslow）",
    "integration: 集成测试（需要真实服务）",
    "spike: spike 验证（Week 1 末决策点用）",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/my_ai_employee"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 1
